--- a/Recipes/Summer Watermelon Gazpacho.html
+++ b/Recipes/Summer Watermelon Gazpacho.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Summer Watermelon Gazpacho</h1>
-    <img scr =""  alt="Summer Watermelon Gazpacho">
+    <img src ="images/Summer Watermelon Gazpacho.png"  alt="Summer Watermelon Gazpacho" height="310" width="450">
     <p>This twist on classic gazpacho will be a welcome, refreshing sight on those hot summer days!</p>
     <h3>Ingredients</h3>
         <ul>
