--- a/Recipes/Chicken_noodle_salad.html
+++ b/Recipes/Chicken_noodle_salad.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chicken noodle salad</h1>
-    <img src="Recipes/images/Chicken Noodle Salad.jpg" alt="Chicken Noodle Salad" height="310" width="310">
+    <img src="images/Chicken Noodle Salad.jpg" alt="Chicken Noodle Salad" height="300" width="450">
     <p>Get ready to make all sorts of friends when you bring a big bowl of this Asian chicken noodle salad to the next big cookout. 
         The only folks you might scare away are the ones who brought regular pasta salads. 
         There's just something delightfully addictive about this special combination of cold and spicy. 
