--- a/Recipes/Summer Grilled Shrimp.html
+++ b/Recipes/Summer Grilled Shrimp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Summer Grilled Shrimp</h1>
-    <img scr =""  alt="Summer Grilled Shrimp">
+    <img src ="images/Summer Grilled Shrimp.png"  alt="Summer Grilled Shrimp" height="310" width="310">
     <p>This grilled shrimp salad featuring sweet and smoky grilled shrimp and a cilantro vinaigrette is a great main dish salad in the summertime. Serve with some crusty bread and a nice glass of wine!</p>
     <h3>Ingredients</h3>
         <ul>
