--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li><a href="Recipes/Chicken_noodle_salad.html">Chicken Noodle Salad</a></li>
     <li><a href="Recipes/Summer Grilled Shrimp.html">Summer Grilled Shrimp</a></li>
     <li><a href="Recipes/Summer Watermelon Gazpacho.html">Summer Watermelon Gazpacho</a></li>
-    <p>This is the first website created to practice the web development course of odin project.</p>
+    <p>This is the first website created to practice the web development course.</p>
     
 </body>
 </html>
